feat: 搭建基本开发环境

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,7 @@
 @import "variables";
 
 //基础样式
+//普通按钮
 .el-button{
   background: $themeColor;
   color: $btnTextColor;
@@ -10,4 +11,10 @@
     background: $themeColor;
     color: $btnTextColor;
   }
+}
+
+//圆角按钮
+.el-button.is-round{
+  border: 2px solid #ffffff;
+  border-radius: 23px;
 }
